refactor, use list.of